--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button onclick="functionName()">functionName</button><br>
+	<button onclick="AccioJob()">AccioJob</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
